    Klavins via aw)

    HADOOP-10873. Fix dead link in Configuration javadoc (Akira AJISAKA 
    via aw)

    HADOOP-10968. hadoop native build fails to detect java_libarch on
    ppc64le (Dinar Valeev via Colin Patrick McCabe)

    HADOOP-10141. Create KeyProvider API to separate encryption key storage
    from the applications. (omalley)

Release 2.5.0 - 2014-08-11

  INCOMPATIBLE CHANGES

  NEW FEATURES

    HADOOP-10498. Add support for proxy server. (daryn)

    HADOOP-9704. Write metrics sink plugin for Hadoop/Graphite (Chu Tong, Alex Newman and Babak Behzad via raviprak)

    HADOOP-8943. Support multiple group mapping providers. (Kai Zheng via brandonli)

    HADOOP-9361 Strictly define the expected behavior of filesystem APIs and
    write tests to verify compliance (stevel)

  IMPROVEMENTS

    HADOOP-10451. Remove unused field and imports from SaslRpcServer.
    (Benoy Antony via jing9)

    HADOOP-10345. Sanitize the the inputs (groups and hosts) for the proxyuser
    configuration. (Benoy Antony via jing9)

    HADOOP-10454. Provide FileContext version of har file system. (Kihwal Lee
    via jeagles)

    HADOOP-10104. Update jackson to 1.9.13 (Akira Ajisaka via stevel)

    HADOOP-10503. Move junit up to v 4.11. (cnauroth)

    HADOOP-10535. Make the retry numbers in ActiveStandbyElector configurable.
    (jing9)

    HADOOP-10322. Add ability to read principal names from a keytab.
    (Benoy Antony and Daryn Sharp via kihwal)

    HADOOP-10549. MAX_SUBST and varPat should be final in Configuration.java.
    (Gera Shegalov via cnauroth)

    HADOOP-10471. Reduce the visibility of constants in ProxyUsers.
    (Benoy Antony via wheat9)

    HADOOP-10556. Add toLowerCase support to auth_to_local rules 
    for service name. (tucu)

    HADOOP-10467. Enable proxyuser specification to support list of users in
    addition to list of groups (Benoy Antony via Arpit Agarwal)

    HADOOP-10158. SPNEGO should work with multiple interfaces/SPNs.