@@ -188,6 +188,9 @@ Release 2.6.0 - UNRELEASED
     HADOOP-10141. Create KeyProvider API to separate encryption key storage
     from the applications. (omalley)
 
+    HADOOP-10237. JavaKeyStoreProvider needs to set keystore permissions
+    correctly. (Larry McCay via omalley)
+
 Release 2.5.0 - 2014-08-11
 
   INCOMPATIBLE CHANGES
